--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
 		"vanilla/garden-http": "~1.0",
 		"vanilla/htmlawed": "~2.0",
 		"vanilla/nbbc": "~2.1",
-		"vanilla/garden-password": "~1.0"
+		"vanilla/garden-password": "~1.0",
+		"tburry/pquery": "~1.1"
 	},
 	"autoload": {
 		"classmap": [
