Replace our PHPMailer with the latest version using composer

--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,10 @@
         "vanilla/htmlawed": "~2.0",
         "vanilla/nbbc": "~2.1",
         "vanilla/garden-password": "~1.0",
-		"tburry/pquery": "~1.1",
-		"container-interop/container-interop": "^1.1",
-        "vanilla/php-ico": "~1.0"
+        "vanilla/php-ico": "~1.0",
+        "tburry/pquery": "~1.1",
+        "phpmailer/phpmailer": "~5.2",
+        "container-interop/container-interop": "^1.1"
     },
     "autoload": {
         "classmap": [
