Import Schema classes and tests from Garden framework (#4732)
* Migrate Schema class, tests and dependencies from Garden

* Update Garden Schema test namespaces

* Add Garden schema function dependencies

* Remove Garden\ClientException and Garden\Response

* Refactor Garden\ValidationException to extend Exception

* Rename array_select to arraySelect

* Rename str_ends to strEnds

* Move arraySelect and strEnds functions to private members

--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "VanillaTests\\": "tests"
+            "VanillaTests\\": "tests",
+            "GardenTests\\": "tests"
         }
     }
 }
