--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ nbproject/project.xml
 /vendor/
 node_modules/
 bower_components/
+npm-debug.log
 /build/*
 !/build/build.xml
 !/build/package-include.txt
