--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,7 @@
     "autoload-dev": {
         "psr-4": {
             "VanillaTests\\": "tests",
-            "VanillaTests\\Fixtures\\": "tests\\fixtures\\src"
+            "VanillaTests\\Fixtures\\": "tests\\fixtures\\src",
             "GardenTests\\": "tests"
         }
     }
