--- a/applications/dashboard/bower.json
+++ b/applications/dashboard/bower.json
@@ -6,7 +6,7 @@
     "google-code-prettify": "^1.0.4",
     "ace": "^1.2.3",
     "ace-builds": "^1.2.3",
-    "color-themes-for-google-code-prettify": "*",
+    "color-themes-for-google-code-prettify": "https://github.com/jmblog/color-themes-for-google-code-prettify.git",
     "tether": "^1.3.2",
     "tether-drop": "^1.4.2",
     "clipboard": "^1.5.12",
