--- a/applications/dashboard/js/.jshintrc
+++ b/applications/dashboard/js/.jshintrc
@@ -21,5 +21,5 @@
   "trailing": true,
   "smarttabs": true,
   "white": true,
-  "predef": ["prettyPrint", "jQuery", "ace", "Drop", "gdn", "Clipboard", "emailStyles"]
+  "predef": ["prettyPrint", "jQuery", "ace", "Drop", "gdn", "Clipboard", "emailStyles", "DashboardModal"]
 }
