Revert "Add YAML parser as a dependency"

--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,7 @@
         "vanilla/nbbc": "~2.1",
         "tburry/pquery": "~1.1",
         "phpmailer/phpmailer": "~5.2",
-        "psr/log": "~1.0",
-        "symfony/yaml": "^3.2"
+        "psr/log": "~1.0"
     },
     "provide": {
         "ext-gd": "*"
