--- a/plugins/stubcontent/content/user.yaml
+++ b/plugins/stubcontent/content/user.yaml
@@ -1,5 +1,11 @@
 user:
     -
+        tag: "vanilla-user"
+        name: "Vanilla Forums"
+        nick: "Vanilla"
+        email: "vanilla@stub.vanillacommunity.com"
+        photo: "https://images.v-cdn.net/stubcontent/vanilla_avatar.jpg"
+    -
         tag: "user1"
         name: "Karen A. Thomas"
         nick: "Karen"
