Update composer files

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "vanilla/garden-http": "~1.0",
         "vanilla/garden-password": "~1.0",
         "vanilla/htmlawed": "~2.0",
+        "vanilla/legacy-oauth": "~1.0",
         "vanilla/legacy-passwords": "~1.0",
         "vanilla/nbbc": "~2.1"
     },
