Exclude directory content not the directory itself! (#5285)

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
-/applications/
+/applications/*
 !/applications/conversations/
 !/applications/dashboard/
 !/applications/vanilla/
-/cache/
+/cache/*
 !/cache/.gitkeep
-/conf/
+/conf/*
 !/conf/config-defaults.php
 !/conf/constants.php
 !/conf/readme.txt
-/locales/
+/locales/*
 !/locales/.gitkeep
-/plugins/
+/plugins/*
 !/plugins/AllViewed/
 !/plugins/ButtonBar/
 !/plugins/Debugger/
@@ -36,13 +36,13 @@
 !/plugins/VanillaStats/
 !/plugins/OpenID/
 !/plugins/oauth2/
-/themes/
+/themes/*
 !/themes/2011Compatibility/
 !/themes/EmbedFriendly/
 !/themes/bittersweet/
 !/themes/default/
 !/themes/mobile/
-/uploads/
+/uploads/*
 !/uploads/.gitkeep
 *vanillaforums*
 *.kpf
@@ -62,7 +62,7 @@ composer-local.json
 node_modules/
 bower_components/
 npm-debug.log
-/build/
+/build/*
 !/build/build.xml
 !/build/package-include.txt
 !/build/package-exclude.txt
