Update Travis to include PHPUnit (#5301)
Update Travis to include PHPUnit version compatible with their PHP 7.x image.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ addons:
 install:
   - composer self-update
   - composer install -o
+  - composer require phpunit/phpunit ~5
   - tests/travis/nginx/install-nginx.sh
 
 script:
@@ -35,6 +36,6 @@ script:
   - tests/travis/php-lint.sh ./library
   - tests/travis/php-lint.sh ./plugins
   - tests/travis/php-lint.sh ./themes
-  - phpunit -c phpunit.xml.dist
+  - ./vendor/bin/phpunit -c phpunit.xml.dist --coverage-clover=coverage.clover
   - cat /tmp/error.log
   - cat /tmp/access.log
