--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "vanilla/htmlawed": "~2.0",
         "vanilla/legacy-oauth": "~1.0",
         "vanilla/legacy-passwords": "~1.0",
-        "vanilla/nbbc": "~2.1"
+        "vanilla/nbbc": "~2.1",
+        "vanilla/garden-schema": "^1.4.0"
     },
     "provide": {
         "ext-gd": "*"
