Add APIv2 tests to the default test suite and fix the build

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -30,6 +30,9 @@
         <testsuite name="APIv0">
             <directory suffix="Test.php">./tests/APIv0</directory>
         </testsuite>
+        <testsuite name="APIv2">
+            <directory suffix="Test.php">./tests/APIv2</directory>
+        </testsuite>
     </testsuites>
 
     <filter>
