--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 !/plugins/AllViewed/
 !/plugins/ButtonBar/
 !/plugins/Debugger/
+!/plugins/editor/
 !/plugins/EmojiExtender/
 !/plugins/Facebook/
 !/plugins/Flagging/
@@ -21,21 +22,22 @@
 !/plugins/Gravatar/
 !/plugins/GooglePlus/
 !/plugins/GooglePrettify/
-!/plugins/Quotes/
 !/plugins/IndexPhotos/
-!/plugins/VanillaInThisDiscussion/
-!/plugins/StopForumSpam/
-!/plugins/editor/
-!/plugins/ProfileExtender/
 !/plugins/HtmLawed/
-!/plugins/PrivateCommunity/
-!/plugins/Twitter/
-!/plugins/vanillicon/
-!/plugins/SplitMerge/
-!/plugins/Tagging/
-!/plugins/VanillaStats/
 !/plugins/OpenID/
 !/plugins/oauth2/
+!/plugins/PrivateCommunity/
+!/plugins/ProfileExtender/
+!/plugins/Quotes/
+!/plugins/recaptcha/
+!/plugins/SplitMerge/
+!/plugins/StopForumSpam/
+!/plugins/stubcontent/
+!/plugins/Tagging/
+!/plugins/Twitter/
+!/plugins/VanillaStats/
+!/plugins/VanillaInThisDiscussion/
+!/plugins/vanillicon/
 /themes/*
 !/themes/2011Compatibility/
 !/themes/EmbedFriendly/
