Update environment variables to respect naming convention

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,10 +17,10 @@
         <ini name="memory_limit" value="-1"/>
         <ini name="date.timezone" value="America/Montreal"/>
 
-        <env name="baseurl" value="http://vanilla.test:8080" />
-        <env name="dbname" value="vanilla_test"/>
-        <env name="dbuser" value="travis" />
-        <env name="dbpass" value="" />
+        <env name="TEST_BASEURL" value="http://vanilla.test:8080" />
+        <env name="TEST_DB_NAME" value="vanilla_test"/>
+        <env name="TEST_DB_USER" value="travis" />
+        <env name="TEST_DB_PASSWORD" value="" />
     </php>
 
     <testsuites>
