--- a/.htaccess.dist
+++ b/.htaccess.dist
@@ -9,10 +9,21 @@
     # (ex. You put Vanilla in /forum so change the next line to: RewriteBase /forum)
     # RewriteBase /
 
-    RewriteCond %{QUERY_STRING} ^p=/?([^&]+)(&([^?]+))?$
-    RewriteRule ^index\.php %1?%3 [E=X_REWRITE:1,L]
+    # Deny access to certain directories that SHOULD not be exposed.
+    RewriteRule ^\.git - [L,R=403]
+    # RewriteRule ^build/.* - [L,R=403] # Already covered by .htaccess
+    RewriteRule ^cache/.* - [L,R=403]
+    RewriteRule ^cgi-bin/.* - [L,R=403]
+    RewriteRule ^uploads/import/.* - [L,R=403]
+    # RewriteRule ^conf/.* - [L,R=403] # Already covered by .htaccess
+    # RewriteRule ^tests/.* - [L,R=403] # Already covered by .htaccess
+    RewriteRule ^vendor/.* - [L,R=403]
 
-    # The basic rewrite rule.
+    # Prevent access to any php script but /index.php
+    RewriteCond %{REQUEST_URI} !^/index.php$
+    RewriteRule ^(.+\.php)$ index.php [QSA,E=X_REWRITE:1,E=X_PATH_INFO:/$1,L]
+
+    # Redirect any non existing file/directory to /index.php
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ index.php [QSA,E=X_REWRITE:1,E=X_PATH_INFO:/$1,L]
@@ -21,11 +32,6 @@
     RewriteCond %{ENV:REDIRECT_X_REWRITE} .+
     RewriteCond %{ENV:REDIRECT_X_PATH_INFO} (.+)
     RewriteRule ^index\.php - [QSA,E=X_REWRITE:1,E=!REDIRECT_X_REWRITE,E=X_PATH_INFO:%1,E=!REDIRECT_X_PATH_INFO,L]
-
-    # 301 redirect urls that start with index.php
-    #RewriteCond %{REQUEST_METHOD} GET [NC]
-    #RewriteCond %{REQUEST_URI} ^(.*?)/index\.php(.*)$
-    #RewriteRule ^index\.php /%1%2 [QSA,R,L]
 </IfModule>
 
 <IfModule mod_headers.c>
