Simplify hardening rules

--- a/.htaccess.dist
+++ b/.htaccess.dist
@@ -14,14 +14,14 @@
     ####
     # Deny access to certain directories that SHOULD not be exposed.
     ####
-    RewriteRule ^\.git - [L,R=403]
-    #RewriteRule ^build/.* - [L,R=403] # Already covered by .htaccess
-    RewriteRule ^cache/.* - [L,R=403]
-    RewriteRule ^cgi-bin/.* - [L,R=403]
-    RewriteRule ^uploads/import/.* - [L,R=403]
-    #RewriteRule ^conf/.* - [L,R=403] # Already covered by .htaccess
-    #RewriteRule ^tests/.* - [L,R=403] # Already covered by .htaccess
-    RewriteRule ^vendor/.* - [L,R=403]
+    RewriteRule (^|/)\.git - [L,R=403]
+    #RewriteRule ^build/ - [L,R=403] # Already covered by .htaccess
+    RewriteRule ^cache/ - [L,R=403]
+    RewriteRule ^cgi-bin/ - [L,R=403]
+    RewriteRule ^uploads/import/ - [L,R=403]
+    #RewriteRule ^conf/ - [L,R=403] # Already covered by .htaccess
+    #RewriteRule ^tests/ - [L,R=403] # Already covered by .htaccess
+    RewriteRule ^vendor/ - [L,R=403]
 
     ####
     # Prevent access to any php script by redirecting the request to /index.php
