--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "php": ">=5.6.0",
         "container-interop/container-interop": "^1.1",
         "chrisjean/php-ico": "~1.0",
+        "firebase/php-jwt": "~5.0",
         "michelf/php-markdown": "~1.7.0",
         "pclzip/pclzip": "~2.0",
         "phpmailer/phpmailer": "~5.2",
