Require phpunit 5.0 as a dev install to allow unit testing

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,9 @@
         "vanilla/nbbc": "~2.1",
         "vanilla/garden-schema": "^1.4.2"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~5.0"
+    },
     "provide": {
         "ext-gd": "*"
     },
