--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,10 @@
             "email": "lincoln@vanillaforums.com"
         }
     ],
+    "repositories": [{
+      "type": "git",
+      "url": "git@github.com:vanilla/vanilla-connect.git"
+    }],
     "require": {
         "php": ">=5.6.0",
         "container-interop/container-interop": "^1.1",
@@ -35,16 +39,18 @@
         "tburry/pquery": "~1.1",
         "vanilla/garden-container": "^1.3.4",
         "vanilla/garden-http": "~1.0",
+        "vanilla/garden-schema": "^1.4.2",
         "vanilla/garden-password": "~1.0",
         "vanilla/htmlawed": "~2.0",
         "vanilla/legacy-oauth": "~1.0",
         "vanilla/legacy-passwords": "~1.0",
         "vanilla/nbbc": "~2.1",
-        "vanilla/garden-schema": "^1.4.2"
+        "vanilla/vanilla-connect": "dev-feature/initial"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.0"
     },
+    "minimum-stability": "dev",
     "provide": {
         "ext-gd": "*"
     },
