VanillaConnect plugin initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@
 !/plugins/stubcontent/
 !/plugins/Tagging/
 !/plugins/Twitter/
+!/plugins/vanillaconnect/
 !/plugins/VanillaStats/
 !/plugins/VanillaInThisDiscussion/
 !/plugins/vanillicon/
