--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,6 @@
             "email": "lincoln@vanillaforums.com"
         }
     ],
-    "repositories": [{
-      "type": "git",
-      "url": "git@github.com:vanilla/vanilla-connect-php.git"
-    }],
     "require": {
         "php": ">=5.6.0",
         "container-interop/container-interop": "^1.1",
@@ -45,12 +41,11 @@
         "vanilla/legacy-oauth": "~1.0",
         "vanilla/legacy-passwords": "~1.0",
         "vanilla/nbbc": "~2.1",
-        "vanilla/vanilla-connect": "dev-master"
+        "vanilla/vanilla-connect": "~0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.0"
     },
-    "minimum-stability": "dev",
     "provide": {
         "ext-gd": "*"
     },
