--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,4 @@
-dist: precise
-
-language: php
-
-php:
-    - 5.6
-    - 7.0
-    - 7.1
-    - 7.2
-    - hhvm
-
-sudo: false
-
-matrix:
-  allow_failures:
-    - php: 7.2
-    - php: hhvm
-  fast_finish: true
-
-cache:
-  - apt
-
+# Add dependencies whitelisted by Travis and setup a loopback hostname for testing.
 addons:
   apt:
     packages:
@@ -28,23 +7,32 @@ addons:
   hosts:
     - vanilla.test
 
-install:
+# Steps to prepare for build script execution.
+before_script:
+  - phpenv config-rm xdebug.ini
   - composer self-update
-  - composer install -o
+  - composer install --optimize-autoloader
   - composer require phpunit/phpunit ~5
   - tests/travis/setup.sh
 
-script:
-  - tests/travis/php-lint.sh ./applications
-  - tests/travis/php-lint.sh ./conf
-  - tests/travis/php-lint.sh ./library
-  - tests/travis/php-lint.sh ./plugins
-  - tests/travis/php-lint.sh ./themes
-  - ./vendor/bin/phpunit -c phpunit.xml.dist --coverage-clover=coverage.clover
-  - ls -lah ./conf
-  - cat /tmp/error.log
-  - cat /tmp/access.log
+# Cache Composer package files.
+cache:
+  directories:
+    - $HOME/.composer/cache/files
 
+# No additional system dependencies to install. Skip the install step.
+install: true
+
+# The project's primary programming language. This will affect default dependency availability.
+language: php
+
+# Configure the build.
+matrix:
+  allow_failures:
+    - php: 7.2
+  fast_finish: true
+
+# Send status update notifications to a HipChat room.
 notifications:
   hipchat:
     format: html
@@ -53,3 +41,20 @@ notifications:
       - secure: "SsKmSAZFynBz4ZKm5NPyuXvNjIMyxpNMXsgfXVImG8xjQHdXjEpZAiyckK8E2lXBBypv59Oex6wsS0RvyxpI/mwQ9dTQ9ayurQxwH3V5Q/+pRbtXJOkP+DSIsHhRb9D4xa5nPbh4N48+QZvUFiH2ety9/gev4mtMkLv3lC0vgpc="
     template:
       - '%{repository_slug} build <a href="%{build_url}">#%{build_number}</a> (%{branch} - <a href="%{compare_url}">%{commit}</a> by %{author}): %{message}'
+
+# The versions of PHP to test the project under.
+php:
+  - 5.6
+  - 7.0
+  - 7.1
+  - 7.2
+
+# Steps of the build script.
+script:
+  - tests/travis/main.sh
+  - ls -lah ./conf
+  - cat /tmp/error.log
+  - cat /tmp/access.log
+
+# Run build in a Docker container.  Reduces time between commit and start of build.
+sudo: false
