--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,11 @@
             "email": "lincoln@vanillaforums.com"
         }
     ],
+    "config": {
+        "platform": {
+            "php": "5.6.31"
+        }
+    },
     "require": {
         "php": ">=5.6.0",
         "container-interop/container-interop": "^1.1",
