Remove rogue text from phpunit.xml.dist

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,7 +25,7 @@
 
     <testsuites>
         <testsuite name="Library">
-            <directory suffix="Test.php">./tests/Library/</directory> for
+            <directory suffix="Test.php">./tests/Library/</directory>
         </testsuite>
         <testsuite name="Models">
             <directory suffix="Test.php">./tests/Models</directory>
