Fix the bootstrap file referencing wrong core lib

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "promise-polyfill": "^6.1.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
-        "setasap": "^2.0.0"
+        "setasap": "^2.0.0",
+        "sprintf-js": "^1.1.1",
+        "webpack": "^3.10.0"
     },
     "devDependencies": {
         "@types/jest": "^22.0.0",
