--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "devDependencies": {
         "@types/jest": "^22.0.0",
         "@vanillaforums/babel-preset": "^1.0.2",
+        "@vanillaforums/eslint-config": "^1.1.1",
         "babel-core": "^6.26.0",
         "babel-jest": "^22.0.4",
         "cross-env": "^5.1.3",
