--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "lodash.debounce": "^4.0.8",
         "moment": "^2.19.4",
         "promise-polyfill": "^6.1.0",
+        "quill": "^1.3.5",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "setasap": "^2.0.0",
