--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
     "description": "Vanilla is a powerfully simple discussion forum you can easily customize to make as unique as your community.",
     "license": "GPL-2.0",
     "dependencies": {
+        "@types/classnames": "^2.2.3",
         "axios": "^0.17.1",
         "babel-eslint": "^8.0.3",
         "babel-polyfill": "^6.26.0",
+        "classnames": "^2.2.5",
         "eslint": "^4.13.1",
+        "eslint-plugin-react": "^7.6.1",
         "lodash": "^4.17.4",
         "lodash.debounce": "^4.0.8",
         "moment": "^2.19.4",
@@ -20,6 +23,8 @@
     },
     "devDependencies": {
         "@types/jest": "^22.0.0",
+        "@types/prop-types": "^15.5.2",
+        "@types/react": "^16.0.36",
         "@vanillaforums/babel-preset": "^1.0.2",
         "@vanillaforums/eslint-config": "^1.1.1",
         "babel-core": "^6.26.0",
