--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
         "lodash": "^4.17.4",
         "lodash.debounce": "^4.0.8",
         "moment": "^2.19.4",
+        "parchment": "^1.1.3",
         "promise-polyfill": "^6.1.0",
         "quill": "^1.3.5",
+        "quill-delta": "^3.6.2",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "setasap": "^2.0.0",
