--- a/plugins/editor/package.json
+++ b/plugins/editor/package.json
@@ -3,16 +3,16 @@
   "private": true,
   "devDependencies": {
     "bower": "*",
+    "wiredep": "4.0.x",
     "grunt": "1.0.x",
-    "grunt-autoprefixer": "3.0.x",
     "grunt-cli": "1.2.x",
-    "grunt-contrib-imagemin": "1.0.x",
-    "grunt-contrib-watch": "1.0.x",
-    "grunt-sass": "^2.0.0",
-    "grunt-wiredep": "3.0.x",
     "load-grunt-tasks": "3.5.x",
     "time-grunt": "1.4.x",
-    "wiredep": "4.0.x"
+    "grunt-sass": "^2.0.0",
+    "grunt-contrib-watch": "1.0.x",
+    "grunt-contrib-imagemin": "1.0.x",
+    "grunt-wiredep": "3.0.x",
+    "grunt-autoprefixer": "3.0.x"
   },
   "engines": {
     "node": ">=0.10.0"
@@ -21,9 +21,5 @@
     "install": "bower install",
     "build": "grunt",
     "watch": "grunt watch"
-  },
-  "dependencies": {
-    "parchment": "^1.1.3",
-    "quill-delta": "^3.6.2"
   }
 }
