--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "babel-jest": "^22.0.4",
         "cross-env": "^5.1.3",
         "glob": "^7.1.2",
+        "html-loader-jest": "^0.2.1",
         "jest": "^22.1.4",
         "mutationobserver-shim": "^0.3.2"
     },
@@ -49,14 +50,19 @@
         "watchPathIgnorePatterns": [
             "/fixtures/"
         ],
+        "moduleDirectories": [
+            "node_modules"
+        ],
         "moduleNameMapper": {
             "@core/(.*)$": "<rootDir>/src/scripts/$1",
             "@dashboard/(.*)$": "<rootDir>/applications/dashboard/src/scripts/$1",
             "@vanilla/(.*)$": "<rootDir>/applications/vanilla/src/scripts/$1"
         },
         "transform": {
-            "^.+\\.(js|jsx|ts|tsx)$": "babel-jest"
+            "^.+\\.(js|jsx|ts|tsx)$": "babel-jest",
+            "^.+\\.svg?$": "html-loader-jest"
         },
+        "transformIgnorePatterns": [],
         "setupFiles": [
             "<rootDir>/src/scripts/__tests__/test-setup.js"
         ]
