--- a/plugins/rich-editor/package.json
+++ b/plugins/rich-editor/package.json
@@ -1,7 +1,8 @@
 {
     "dependencies": {
         "parchment": "^1.1.3",
-        "quill": "^1.3.5"
+        "quill": "^1.3.5",
+        "react-html-id": "^0.1.2"
     },
     "devDependencies": {
         "@types/quill": "^1.3.5"
