--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "license": "GPL-2.0",
     "dependencies": {
         "axios": "^0.17.1",
-        "babel-eslint": "^8.0.3",
+        "babel-eslint": "^8.2.1",
         "babel-polyfill": "^6.26.0",
-        "eslint": "^4.13.1",
+        "eslint": "^4.17.0",
+        "eslint-plugin-react": "^7.6.1",
         "lodash": "^4.17.4",
         "lodash.debounce": "^4.0.8",
         "moment": "^2.19.4",
@@ -20,7 +21,7 @@
     "devDependencies": {
         "@types/jest": "^22.0.0",
         "@vanillaforums/babel-preset": "^1.0.2",
-        "@vanillaforums/eslint-config": "^1.1.1",
+        "@vanillaforums/eslint-config": "^1.2.1",
         "babel-core": "^6.26.0",
         "babel-jest": "^22.0.4",
         "cross-env": "^5.1.3",
