--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,16 @@ before_script:
   - composer install --optimize-autoloader
   - composer require phpunit/phpunit ~5
   - tests/travis/setup.sh
+  - yarn --version
   - yarn install --pure-lockfile
+  - cd plugins/rich-editor
   - yarn install --pure-lockfile --modules-folder ./plugins/rich-editor
 
 # Cache Composer package files.
 cache:
   directories:
     - $HOME/.composer/cache/files
+    - $HOME/.yarn-cache
   yarn: true
 
 # No additional system dependencies to install. Skip the install step.
