--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,8 @@ before_script:
   - composer install --optimize-autoloader
   - composer require phpunit/phpunit ~5
   - tests/travis/setup.sh
-  - yarn --version
   - yarn install --pure-lockfile
-  - cd plugins/rich-editor
-  - yarn install --pure-lockfile --modules-folder ./plugins/rich-editor
+  - cd plugins/rich-editor && yarn install --pure-lockfile
   - cd ../..
 
 # Cache Composer package files.
