--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "devDependencies": {
         "@types/classnames": "^2.2.3",
+        "@types/enzyme": "^3.1.9",
         "@types/jest": "^22.0.0",
         "@types/prop-types": "^15.5.2",
         "@types/quill": "^1.3.5",
@@ -30,6 +31,8 @@
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.2.1",
         "babel-jest": "^22.0.4",
+        "enzyme": "^3.3.0",
+        "enzyme-adapter-react-16": "^1.1.1",
         "eslint": "^4.17.0",
         "eslint-plugin-react": "^7.6.1",
         "glob": "^7.1.2",
@@ -63,6 +66,7 @@
             "^.+\\.(js|jsx|ts|tsx)$": "babel-jest",
             "^.+\\.svg?$": "html-loader-jest"
         },
+        "snapshotSerializers": ["enzyme-to-json/serializer"],
         "transformIgnorePatterns": [],
         "setupFiles": [
             "<rootDir>/src/scripts/__tests__/test-setup.js"
