Added shave.js as a dependency Added Link embed blot

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "setasap": "^2.0.0",
+        "shave": "^2.1.3",
         "sprintf-js": "^1.1.1",
         "webpack": "^3.10.0"
     },
