--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "setasap": "^2.0.0",
         "shave": "^2.1.3",
         "sprintf-js": "^1.1.1",
+        "twemoji": "^2.5.0",
         "webpack": "^3.10.0"
     },
     "devDependencies": {
