--- a/composer.json
+++ b/composer.json
@@ -45,8 +45,7 @@
         "vanilla/htmlawed": "~2.0",
         "vanilla/legacy-oauth": "~1.0",
         "vanilla/legacy-passwords": "~1.0",
-        "vanilla/nbbc": "~2.1",
-        "vanilla/vanilla-connect": "~0.1"
+        "vanilla/nbbc": "~2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.0"
