Fix swagger query param config
This incorporates [fixes from another
PR](https://github.com/vanilla/internal/pull/1488).

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
         "promise-polyfill": "^6.1.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
+        "react-redux": "^5.0.7",
+        "react-router-dom": "^4.2.2",
+        "redux": "^3.7.2",
         "setasap": "^2.0.0",
         "sprintf-js": "^1.1.1",
         "webpack": "^3.10.0"
