Allow react components to mount on pages

--- a/package.json
+++ b/package.json
@@ -5,20 +5,26 @@
     "dependencies": {
         "axios": "^0.17.1",
         "babel-polyfill": "^6.26.0",
+        "classnames": "^2.2.5",
         "lodash": "^4.17.4",
         "lodash.debounce": "^4.0.8",
         "moment": "^2.19.4",
         "promise-polyfill": "^6.1.0",
+        "prop-types": "^15.6.1",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
+        "react-redux": "^5.0.7",
+        "react-router-dom": "^4.2.2",
+        "redux": "^3.7.2",
         "setasap": "^2.0.0",
         "sprintf-js": "^1.1.1",
+        "twemoji": "^2.5.1",
         "webpack": "^3.10.0"
     },
     "devDependencies": {
         "@types/jest": "^22.0.0",
         "@vanillaforums/babel-preset": "^1.0.2",
-        "@vanillaforums/eslint-config": "^1.2.1",
+        "@vanillaforums/eslint-config": "^1.2.2",
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.2.1",
         "babel-jest": "^22.0.4",
