Convert parts of core js to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
     "compilerOptions": {
-        "checkJs": true,
-        "jsx": "preserve",
+        "jsx": "react",
         "lib": [
             "es2017",
             "dom",
             "dom.iterable"
         ],
+        "allowSyntheticDefaultImports": true,
+        "moduleResolution": "node",
+        "strictNullChecks": true,
+        "target": "es2017",
         "baseUrl": ".",
         "paths": {
             "@core/*": ["./src/scripts/*"],
