--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "description": "Vanilla is a powerfully simple discussion forum you can easily customize to make as unique as your community.",
     "license": "GPL-2.0",
     "dependencies": {
+        "@types/react": "^16.1.0",
         "axios": "^0.17.1",
         "babel-polyfill": "^6.26.0",
         "classnames": "^2.2.5",
@@ -19,6 +20,7 @@
         "setasap": "^2.0.0",
         "sprintf-js": "^1.1.1",
         "twemoji": "^2.5.1",
+        "typescript": "^2.8.1",
         "webpack": "^3.10.0"
     },
     "devDependencies": {
@@ -31,7 +33,8 @@
         "cross-env": "^5.1.3",
         "eslint": "^4.17.0",
         "eslint-plugin-react": "^7.6.1",
-        "jest": "^22.0.4"
+        "jest": "^22.0.4",
+        "ts-jest": "^22.4.2"
     },
     "scripts": {
         "test": "cross-env NODE_ENV=test BABEL_ENV=test jest",
@@ -53,8 +56,16 @@
             "@vanilla/(.*)$": "<rootDir>/applications/vanilla/src/scripts/$1"
         },
         "transform": {
-            "^.+\\.(js|jsx|ts|tsx)$": "babel-jest"
+            "^.+\\.(js|jsx)$": "babel-jest",
+            "^.+\\.(ts|tsx)$": "ts-jest"
         },
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js",
+            "jsx"
+        ],
+        "testRegex": "__tests__/.*\\.test\\.(ts|tsx|js|jsx)$",
         "setupFiles": [
             "<rootDir>/src/scripts/__tests__/test-setup.js"
         ]
