--- a/package.json
+++ b/package.json
@@ -20,25 +20,28 @@
         "setasap": "^2.0.0",
         "sprintf-js": "^1.1.1",
         "twemoji": "^2.5.1",
-        "typescript": "^2.8.1",
         "webpack": "^3.10.0"
     },
     "devDependencies": {
         "@types/jest": "^22.0.0",
         "@vanillaforums/babel-preset": "^1.0.2",
         "@vanillaforums/eslint-config": "^1.2.2",
+        "@vanillaforums/tslint-config": "^1.0.2",
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.2.1",
         "babel-jest": "^22.0.4",
         "cross-env": "^5.1.3",
         "eslint": "^4.17.0",
         "eslint-plugin-react": "^7.6.1",
-        "jest": "^22.0.4",
-        "ts-jest": "^22.4.2"
+        "jest": "^22.4.3",
+        "ts-jest": "^22.4.2",
+        "tslint": "^5.9.1",
+        "typescript": "^2.8.1"
     },
     "scripts": {
         "test": "cross-env NODE_ENV=test BABEL_ENV=test jest",
-        "test:watch": "cross-env NODE_ENV=test BABEL_ENV=test jest --watch"
+        "test:watch": "cross-env NODE_ENV=test BABEL_ENV=test jest --watch",
+        "lint:ts": "tslint -c tslint.json -e **/node_modules/** -p tsconfig.json -t stylish --fix"
     },
     "jest": {
         "testPathIgnorePatterns": [
