--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "scripts": {
         "test": "cross-env NODE_ENV=test BABEL_ENV=test jest",
         "test:watch": "cross-env NODE_ENV=test BABEL_ENV=test jest --watch",
-        "lint:ts": "tslint -c tslint.json -e **/node_modules/** -p tsconfig.json -t stylish --fix"
+        "lint:ts": "tslint -c tslint.json -e **/node_modules/** -p tsconfig.json -t stylish",
+        "lint:ts:fix": "tslint -c tslint.json -e **/node_modules/** -p tsconfig.json -t stylish --fix"
     },
     "jest": {
         "testPathIgnorePatterns": [
