--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "moduleResolution": "node",
         "strictNullChecks": true,
         "target": "es2017",
+        "module": "esnext",
         "baseUrl": ".",
         "paths": {
             "@core/*": ["./src/scripts/*"],
