--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "devDependencies": {
         "@types/jest": "^22.0.0",
+        "@types/jquery": "^3.3.1",
         "@types/react": "^16.1.0",
         "@types/react-dom": "^16.0.4",
         "@vanillaforums/babel-preset": "^1.0.2",
