--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
         "babel-polyfill": "^6.26.0",
         "classnames": "^2.2.5",
         "emojibase-data": "^2.2.0",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
-        "react-virtualized": "^9.18.5",
         "lodash": "^4.17.4",
         "lodash.debounce": "^4.0.8",
         "moment": "^2.19.4",
         "promise-polyfill": "^6.1.0",
         "prop-types": "^15.6.1",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.2.2",
+        "react-virtualized": "^9.18.5",
         "redux": "^3.7.2",
         "setasap": "^2.0.0",
         "shave": "^2.1.3",
@@ -37,6 +37,7 @@
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.2.1",
         "babel-jest": "^22.0.4",
+        "cross-env": "^5.1.4",
         "enzyme": "^3.3.0",
         "enzyme-adapter-react-16": "^1.1.1",
         "eslint": "^4.17.0",
