Add incldues to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,11 @@
             "@dashboard/*": ["./applications/dashboard/src/scripts/*"]
         }
     },
+    "include": [
+        "**/src/scripts/**/*.ts",
+        "**/src/scripts/**/*.tsx",
+        "global.ts"
+    ],
     "exclude": [
         "**/node_modules"
     ]
