--- a/plugins/rich-editor/package.json
+++ b/plugins/rich-editor/package.json
@@ -4,7 +4,5 @@
         "quill": "^1.3.5",
         "react-html-id": "^0.1.2"
     },
-    "devDependencies": {
-        "@types/quill": "^1.3.5"
-    }
+    "devDependencies": {}
 }
