--- a/plugins/rich-editor/package.json
+++ b/plugins/rich-editor/package.json
@@ -4,5 +4,7 @@
         "quill": "^1.3.5",
         "react-html-id": "^0.1.2"
     },
-    "devDependencies": {}
+    "devDependencies": {
+        "@types/quill": "^1.3.6"
+    }
 }
