--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
         "module": "esnext",
         "baseUrl": ".",
         "paths": {
+            "*": [
+                "node_modules/*"
+            ],
             "@core/*": ["./src/scripts/*"],
             "@vanilla/*": ["./applications/vanilla/src/scripts/*"],
             "@dashboard/*": ["./applications/dashboard/src/scripts/*"]
