--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
         "@types/classnames": "^2.2.3",
         "@types/enzyme": "^3.1.9",
         "@types/jest": "^22.0.0",
-        "@types/prop-types": "^15.5.2",
         "@types/jquery": "^3.3.1",
+        "@types/prop-types": "^15.5.2",
         "@types/react": "^16.1.0",
         "@types/react-dom": "^16.0.4",
+        "@types/react-router-dom": "^4.2.6",
+        "@types/sprintf-js": "^1.1.0",
         "@vanillaforums/babel-preset": "^1.0.2",
         "@vanillaforums/eslint-config": "^1.2.2",
         "@vanillaforums/tslint-config": "^1.0.4",
