--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
         "@types/classnames": "^2.2.3",
         "@types/enzyme": "^3.1.9",
         "@types/jest": "^22.0.0",
-        "@types/prop-types": "^15.5.2",
         "@types/jquery": "^3.3.1",
+        "@types/prop-types": "^15.5.2",
         "@types/react": "^16.1.0",
         "@types/react-dom": "^16.0.4",
         "@vanillaforums/babel-preset": "^1.0.2",
@@ -47,6 +47,7 @@
         "html-loader-jest": "^0.2.1",
         "jest": "^22.4.3",
         "mutationobserver-shim": "^0.3.2",
+        "prettier": "^1.12.0",
         "ts-jest": "^22.4.2",
         "tslint": "^5.9.1",
         "typescript": "^2.8.1"
