--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,11 @@
         ],
         "allowSyntheticDefaultImports": true,
         "moduleResolution": "node",
-        "strictNullChecks": true,
-        "target": "es2017",
+        "strictNullChecks": false,
+        "target": "es5",
         "module": "esnext",
         "baseUrl": ".",
+        "downlevelIteration": true,
         "paths": {
             "*": [
                 "node_modules/*"
