--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "description": "Vanilla is a powerfully simple discussion forum you can easily customize to make as unique as your community.",
     "license": "GPL-2.0",
     "dependencies": {
+        "@types/validator": "^9.4.0",
         "axios": "^0.17.1",
         "babel-polyfill": "^6.26.0",
         "classnames": "^2.2.5",
@@ -22,6 +23,7 @@
         "shave": "^2.1.3",
         "sprintf-js": "^1.1.1",
         "twemoji": "^2.5.1",
+        "validator": "^9.4.1",
         "webpack": "^3.10.0"
     },
     "devDependencies": {
