--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "vanilla",
     "description": "Vanilla is a powerfully simple discussion forum you can easily customize to make as unique as your community.",
     "license": "GPL-2.0",
+    "private": true,
     "dependencies": {
         "@types/validator": "^9.4.0",
         "axios": "^0.17.1",
@@ -13,6 +14,7 @@
         "moment": "^2.19.4",
         "promise-polyfill": "^6.1.0",
         "prop-types": "^15.6.1",
+        "quill": "^1.3.6",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-redux": "^5.0.7",
@@ -44,6 +46,7 @@
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.2.1",
         "babel-jest": "^22.0.4",
+        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
         "cross-env": "^5.1.4",
         "enzyme": "^3.3.0",
         "enzyme-adapter-react-16": "^1.1.1",
@@ -63,42 +66,5 @@
         "test:watch": "cross-env NODE_ENV=test BABEL_ENV=test jest --watch",
         "lint:ts": "tslint -c tslint.json -e '**/node_modules/**' -e '**/src/**/*.{js,jsx}' -p tsconfig.json -t stylish",
         "lint:ts:fix": "tslint -c tslint.json -e '**/node_modules/**' -e '**/src/**/*.{js,jsx}' -p tsconfig.json -t stylish --fix"
-    },
-    "jest": {
-        "testPathIgnorePatterns": [
-            "/node_modules/",
-            "/fixtures/",
-            "/bower_components/",
-            "test-setup.js"
-        ],
-        "watchPathIgnorePatterns": [
-            "/fixtures/"
-        ],
-        "moduleDirectories": [
-            "node_modules"
-        ],
-        "moduleNameMapper": {
-            "@core/(.*)$": "<rootDir>/src/scripts/$1",
-            "@dashboard/(.*)$": "<rootDir>/applications/dashboard/src/scripts/$1",
-            "@vanilla/(.*)$": "<rootDir>/applications/vanilla/src/scripts/$1"
-        },
-        "transform": {
-            "^.+\\.(js|jsx)$": "babel-jest",
-            "^.+\\.(ts|tsx)$": "ts-jest",
-            "^.+\\.svg?$": "html-loader-jest"
-        },
-        "transformIgnorePatterns": [
-            "node_modules/react"
-        ],
-        "moduleFileExtensions": [
-            "ts",
-            "tsx",
-            "js",
-            "jsx"
-        ],
-        "testRegex": "__tests__/.*\\.test\\.(ts|tsx|js|jsx)$",
-        "setupFiles": [
-            "<rootDir>/src/scripts/__tests__/test-setup.js"
-        ]
     }
 }
