--- a/plugins/rich-editor/package.json
+++ b/plugins/rich-editor/package.json
@@ -1,11 +1,12 @@
 {
     "dependencies": {
         "parchment": "^1.1.3",
-        "quill": "^1.3.5",
         "react-html-id": "^0.1.2"
     },
     "devDependencies": {
         "@types/quill": "^1.3.6",
-        "@types/react": "^16.3.10"
+        "@types/react": "^16.3.10",
+        "@vanillaforums/babel-preset": "^1.0.5",
+        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0"
     }
 }
